feat: implement forward kinematics

--- a/src/Components/Interface/style.css
+++ b/src/Components/Interface/style.css
@@ -3,8 +3,11 @@ div {
   right: 0;
   top: 0;
   width: 200px;
-  height: 180px;
   padding: 1rem;
   background-color: #fff;
   z-index: 20;
+}
+
+label {
+  display: block;
 }
